# MutCleaner

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml
doc/changelog/: CHANGELOG_0.2.0.md  CHANGELOG_0.3.0.md  CHANGELOG_0.4.0.md  CHANGELOG_0.6.0.md  CHANGELOG_0.7.0.md
doc/source/: conf.py
doc/source/_static/: custom.css
doc/source/user_guide/: cleaners.md  overview.md  supported_datasets.md
mutcleaner/: __init__.py
mutcleaner/cleaners/: __init__.py  antitoxin_pard3_cleaner.py  archstabms_1e10_cleaner.py  archstabms_1e10_custom_cleaners.py  archstabms_1e10_sup4_cleaner.py  archstabms_1e10_sup5_cleaner.py  basic_cleaners.py  cdna_mgnify_cleaner.py  cdna_proteolysis_cleaner.py  cdna_proteolysis_custom_cleaners.py  chitosanase_cleaner.py  chitosanase_custom_cleaners.py  chitosanase_dtm_cleaner.py  chitosanase_dtm_custom_cleaner.py  ctxm_cleaner.py  ddg_dtm_cleaners.py  human_domainome_custom_cleaners.py  human_domainome_sup2_cleaner.py  human_domainome_sup4_cleaner.py  human_myoglobin_cleaner.py  mgnify_ddg_cleaner.py  proteingym_dms_substitutions_cleaner.py  rbd_ace2_cleaner.py  rbd_antibody_cleaner.py  rbd_custom_cleaner.py  trpb_cleaner.py
mutcleaner/utils/: __init__.py  data_source.py  raw_data_downloader.py  sequence_io.py
tools/: release.sh
